--- a/public/views/includes/toPay.html
+++ b/public/views/includes/toPay.html
@@ -72,7 +72,7 @@
 	<p style="color: #666; font-size: 14px; padding-left: 15px;" translate>{{index.to_address()}}</p>
 
 	<p style="color: #333; font-size: 16px; padding-left: 10px;margin: 10px 0 0 0;" translate>Amount</p>
-	<p style="color: #666; font-size: 14px; padding-left: 15px;">{{index.amount()/1000000}}MN</p>
+	<p style="color: #666; font-size: 14px; padding-left: 15px;">{{index.amount()/1000000}}RNG</p>
 
 	<p class="bbutton" ng-click="index.showToPay();" translate>Sign</p>
 
