--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -613,7 +613,7 @@
                                             class="postfix"
                                             style="line-height: 45px;height: 45px;padding-right: 12px;"
                                             ng-if="home.observed == 1">
-											MN
+											RNG
 										</a>
 									</div>
 								</div>
