update description and variable name

--- a/public/views/disclaimer.html
+++ b/public/views/disclaimer.html
@@ -60,7 +60,7 @@
                 <li translate>You acknowledge that your use of this software is at your own discretion and in compliance with all applicable laws.</li>
                 <li translate>You are responsible for safekeeping your passwords, private key pairs, PINs and any other codes you use to access the software.</li>
                 <li translate>
-                    <b>IF YOU LOSE ACCESS TO YOUR TRUSTNOTE WALLET, YOU ACKNOWLEDGE AND AGREE THAT ANY NOTES OR OTHER VALUABLES YOU HAVE ASSOCIATED WITH THAT TRUSTNOTE WALLET WILL BECOME INACCESSIBLE.</b>
+                    <b>IF YOU LOSE ACCESS TO YOUR RingNetwork WALLET, YOU ACKNOWLEDGE AND AGREE THAT ANY NOTES OR OTHER VALUABLES YOU HAVE ASSOCIATED WITH THAT RingNetwork WALLET WILL BECOME INACCESSIBLE.</b>
                 </li>
                 <li translate>The authors of the software cannot retrieve your private keys or passwords if you lose or forget them and cannot guarantee transaction confirmation as they do not have control over the RingNetwork network.</li>
                 <li translate>To the fullest extent permitted by law, this software is provided “as is” and no representations or warranties can be made of any kind, express or implied, including but not limited to the warranties of merchantability, fitness or a particular purpose and noninfringement.</li>
