--- a/public/views/modals/howToSign.html
+++ b/public/views/modals/howToSign.html
@@ -148,7 +148,7 @@
 		<!--观察钱包-->
 		<div class="howWatch">
 			<p class="howTitle howTitleFFF" translate>Watch wallet</p>
-			<p translate class="txtContent">If you want to use cold wallet in Trustnote version 1.1.5,you should watch the wallet at first.</p>
+			<p translate class="txtContent">If you want to use cold wallet in RingNetwork version 1.1.5,you should watch the wallet at first.</p>
 			<p translate class="txtContentBack">note:one of phone connected network as <b>hot wallet</b> to watch <b>cold wallet</b>,the other one keep offline for Authorized signature.</p>
 
 			<!--第一步-->
